--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Seminario de fisica
+
 <!DOCTYPE html>
 <HTML>
   Olá mundo!
@@ -10,7 +10,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=4.0">
-    <title>Seminário de Física 2024 - Colégio Estadual Duque de Caxias</title>
+    <title>Seminário de Física 2024 - Seminário de Fisica</title>
     <style>
         body {
             font-family: Arial, sans-serif;
