--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
     
     <div class="container">
         <h2>Informações do Evento</h2>
-        <p><strong>Data:</strong> [Inserir Data]</p>
+        <p><strong>Data:</strong> [Inserir Data 04/09/2024]</p>
         <p><strong>Horário:</strong> [Inserir Horário]</p>
         <p><strong>Local:</strong> Auditório do Colégio Estadual Duque de Caxias, Rua [Inserir Rua], nº [Inserir Número] - Antônio Olinto - PR</p>
         <p><strong>Chairman:</strong> Prof. Me. Adriano Dubiel</p>
