--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
     <div class="container">
         <h2>Informações do Evento</h2>
         <p><strong>Data:</strong> [Inserir Data 04/09/2024]</p>
-        <p><strong>Horário:</strong> [08h e 05min]</p>
+        <p><strong>Horário:</strong> [Inserir Data 08h e 05min]</p>
         <p><strong>Local:</strong> Auditório do Colégio Estadual Duque de Caxias, Rua [Inserir Rua], nº [Inserir Número] - Antônio Olinto - PR</p>
         <p><strong>Chairman:</strong> Prof. Me. Adriano Dubiel</p>
         
