--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
 <body>
     <header>
         <h1>Seminário de Física 2024</h1>
-        <p>Seminário de Fisica</p>
+        <p>Colegio Estaduas Duque de caxias, PR</p>
     </header>
     
     <div class="container">
         <h2>Informações do Evento</h2>
         <p><strong>Data:</strong> [Inserir Data 04/09/2024]</p>
         <p><strong>Horário:</strong> [Inserir Data 08h e 05min]</p>
-        <p><strong>Local:</strong> Auditório do Colégio Estadual Duque de Caxias, Rua [Inserir Rua], nº [Inserir Número] - Antônio Olinto - PR</p>
+        <p><strong>Local:</strong> Auditório do Colégio Estadual Duque de Caxias, Rua [Rua Professora Ernestina da Silveira, nº [Inserir Número] - Antônio Olinto - PR</p>
         <p><strong>Chairman:</strong> Prof. Me. Adriano Dubiel</p>
         
         <h2>Agenda</h2>
