--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
         <h2>Contato</h2>
         <p><strong>Organização:</strong> Colégio Estadual Duque de Caxias</p>
         <p><strong>SEED-PR - Núcleo Regional de Educação de União da Vitória</p>
-        <p><strong>Email:</strong> [Inserir Email]</p>
-        <p><strong>Telefone:</strong> [Inserir Telefone]</p>
+        <p><strong>Email:</strong> [Karoline.kotarski@escola.pr.gov.br]</p>
+        <p><strong>Telefone:</strong> [42988395089]</p>
         
         <h2>Patrocinadores</h2>
         <p>[Inserir Patrocinadores]</p>
