--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
 <body>
     <header>
         <h1>Seminário de Física 2024</h1>
-        <p>Colegio Estaduas Duque de caxias, PR</p>
+        <p>Colegio Estadual Duque de caxias, PR</p>
     </header>
     
     <div class="container">
