--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
         </div>
         <div class="agenda-item">
             <h3>15:00 - 16:30</h3>
-            <p>Painel de Discussão - Tema do Painel: [Tema do Painel] - Moderador: [Nome do Moderador] - Participantes: [Nome dos Participantes]</p>
+            <p>Painel de Discussão - Tema do Painel: [Fisica I] - Moderador: [kAROLINE] - Participantes: [Nome dos Participantes]</p>
         </div>
         <div class="agenda-item">
             <h3>16:30 - 17:00</h3>
