--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Atividades em HTML e CSS para os alunos da CED Duque de Caxias- Antonio Olinto
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: hsl(68, 94%, 50%);
             color: #333;
         }
         header {
